<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_agent_manager</name>
  <version>1.0.0</version>
  <description>Simulator of human movement based on Social Force Model</description>
  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>hunav_msgs</depend>
  <depend>people_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>

  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <!--<test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
