<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_evaluator</name>
  <version>1.0.0</version>
  <description>This package collects the data of the hunav simulations and computes different metrics</description>
  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
  <license>MIT</license>

   <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>hunav_msgs</depend>
  <depend>std_srvs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
