<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_sim</name>
  <version>1.0.0</version>
  <description>
    A set of ROS2 packages for the simulation of human pedestrians
  </description>
  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <exec_depend>hunav_msgs</exec_depend>
  <exec_depend>hunav_agent_manager</exec_depend>
  <exec_depend>hunav_rviz2_panel</exec_depend>
  <exec_depend>hunav_evaluator</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
